--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recipe-gallery",
   "version": "0.1.0",
+  "homepage": "https://jem-5.github.io/reddit",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -24,6 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
@@ -56,6 +59,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.7.1"
   }
 }
