--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "no-console": "off",
         "no-unused-vars": "off",
         "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off",
         "prettier/prettier": [
             "error",
             {
