--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "no-unused-vars": "off",
         "react/react-in-jsx-scope": "off",
         "react/prop-types": "off",
+        "react/no-unescaped-entities": 0 ,
         "prettier/prettier": [
             "error",
             {
